# haskell-from-first-principles

./: .gitignore  02_hello_haskell.hs  04_basic_datatypes.hs  10_folding_lists.hs  11_algebraic_datatypes.hs  13_building_projects.hs  14_testing.hs  15_monoid_semigroup.hs  16_functor.hs  17_applicative.hs  18_monads.hs  1_lambda_calculus.hs  20_foldable.hs  21_traversable.hs  22_reader.hs  23_state.hs  24_parser_combinators.hs  3_strings.hs  5_types.hs  6_typeclasses.hs  7_functional_patterns.hs  8_recursion.hs  9_lists.hs  Benchmarks.hs  Ch12_signaling_adversity.hs  Ch16_functor.hs  Ch19_applying_structure.hs  Ch24_parser_combinators.hs  Ch25_composing_types.hs  Ch26_monad_transformers.hs  Ch27_non_strictness.hs  Ch28_basic_libraries.hs  Ch29_io.hs  Ch30_when_things_go_wrong.hs  GitTest.hs  Profiling.hs  README.md  exercises.cabal  stack.yaml
fingerd/: fingerd.cabal
fingerd/src/: Debug.hs  Main.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
hello-haskell/: cabal.sandbox.config  hello-haskell.cabal
hello-haskell/src/: Main.hs
ini-test-files/: Bar.ini  Foo.ini  README.md
modules/: caesar_cipher.hs  cipher.hs  jammin.hs
morse/: morse.cabal
morse/app/: Main.hs
morse/src/: Morse.hs
testing/: testing.cabal
testing/src/: Addition.hs
testing/test/: Spec.hs
