name:                exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bhipple/haskell-from-first-principles
license:             BSD3
license-file:        LICENSE
author:              Benjamin Hipple
maintainer:          benjamin.hipple@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Ch24_parser_combinators
                     , Ch25_composing_types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , trifecta
                     , text
                     , aeson
                     , attoparsec
                     , bytestring
                     , parsers
                     , hspec
                     , raw-strings-qq
  default-language:    Haskell2010

