name:                exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bhipple/haskell-from-first-principles
license:             BSD3
license-file:        LICENSE
author:              Benjamin Hipple
maintainer:          benjamin.hipple@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Ch24_parser_combinators
                     , Ch25_composing_types
                     , GitTest
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , gitlib
                     , gitlib-libgit2
                     , hit
                     , hlibgit2
                     , hspec
                     , parsers
                     , raw-strings-qq
                     , text
                     , trifecta
  -- For hlibgit2
  include-dirs:        .
                       /usr/local/opt/icu4c/lib/include
                       /usr/local/opt/openssl/include
  extra-lib-dirs:      /usr/local/opt/icu4c/lib
                       /usr/local/opt/openssl/lib
  default-language:    Haskell2010
