name:                exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bhipple/haskell-from-first-principles
license:             BSD3
license-file:        LICENSE
author:              Benjamin Hipple
maintainer:          benjamin.hipple@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Ch24_parser_combinators
                     , Ch25_composing_types
                     , Ch26_monad_transformers
                     , Ch27_non_strictness
                     , Ch28_basic_libraries
                     , Ch29_io
                     , Ch30_when_things_go_wrong
                     , GitTest
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , criterion
                     , directory
                     , filepath
                     , gitlib
                     , gitlib-libgit2
                     , hit
                     , hlibgit2
                     , hspec
                     , parsers
                     , primitive
                     , random
                     , raw-strings-qq
                     , scotty
                     , text
                     , transformers
                     , trifecta
                     , vector
  -- For hlibgit2
  include-dirs:        .
                       /usr/local/opt/icu4c/lib/include
                       /usr/local/opt/openssl/include
  extra-lib-dirs:      /usr/local/opt/icu4c/lib
                       /usr/local/opt/openssl/lib
  ghc-options:         -O2
  default-language:    Haskell2010

benchmark book-bench
  type:           exitcode-stdio-1.0
  hs-source-dirs: .
  main-is:        Benchmarks.hs
  build-depends:  base
                , criterion
                , deepseq
                , exercises
                , primitive
                , vector
  ghc-options:    -O2
  default-language: Haskell2010
